# c

./: .clang-format  CMakeLists.txt
cmake/modules/arch/: x86_64.cmake
cmake/modules/os/: Linux.cmake
include/dywoq/: c.h
